--- a/style.css
+++ b/style.css
@@ -701,6 +701,11 @@ video {
   display: flex;
 }
 
+.size-2 {
+  width: 0.5rem;
+  height: 0.5rem;
+}
+
 .h-16 {
   height: 4rem;
 }
@@ -715,6 +720,22 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.max-h-2 {
+  max-height: 0.5rem;
+}
+
+.max-h-28 {
+  max-height: 7rem;
+}
+
+.max-h-24 {
+  max-height: 6rem;
+}
+
+.max-h-14 {
+  max-height: 3.5rem;
 }
 
 .w-16 {
